[gd_scene load_steps=83 format=1]

[ext_resource path="res://laberinto/laberinto.gd" type="Script" id=1]
[ext_resource path="res://laberinto/tilemap/tileLaberinto.gd" type="Script" id=2]
[ext_resource path="res://laberinto/inventario/inventario.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sonidos_ui/bandoneon.wav" type="Sample" id=4]
[ext_resource path="res://assets/sonidos_ui/contrabajo.wav" type="Sample" id=5]
[ext_resource path="res://assets/sonidos_ui/violin.wav" type="Sample" id=6]
[ext_resource path="res://laberinto/personaje.gd" type="Script" id=7]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/S/camion-S-0001.tex" type="Texture" id=8]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/S/camion-S-0002.tex" type="Texture" id=9]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/S/camion-S-0003.tex" type="Texture" id=10]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/S/camion-S-0004.tex" type="Texture" id=11]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0001.tex" type="Texture" id=12]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0002.tex" type="Texture" id=13]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0003.tex" type="Texture" id=14]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0004.tex" type="Texture" id=15]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0005.tex" type="Texture" id=16]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0006.tex" type="Texture" id=17]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0007.tex" type="Texture" id=18]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0008.tex" type="Texture" id=19]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0009.tex" type="Texture" id=20]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0010.tex" type="Texture" id=21]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/S/camion-S-0011.tex" type="Texture" id=22]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0001.tex" type="Texture" id=23]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0002.tex" type="Texture" id=24]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0003.tex" type="Texture" id=25]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0004.tex" type="Texture" id=26]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0005.tex" type="Texture" id=27]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0006.tex" type="Texture" id=28]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0007.tex" type="Texture" id=29]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0008.tex" type="Texture" id=30]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0009.tex" type="Texture" id=31]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0010.tex" type="Texture" id=32]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/N/camion-N-0011.tex" type="Texture" id=33]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/E/camion-E-0001.tex" type="Texture" id=34]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/E/camion-E-0002.tex" type="Texture" id=35]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/E/camion-E-0003.tex" type="Texture" id=36]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/E/camion-E-0004.tex" type="Texture" id=37]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0001.tex" type="Texture" id=38]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0002.tex" type="Texture" id=39]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0003.tex" type="Texture" id=40]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0004.tex" type="Texture" id=41]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0005.tex" type="Texture" id=42]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0006.tex" type="Texture" id=43]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0007.tex" type="Texture" id=44]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0008.tex" type="Texture" id=45]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0009.tex" type="Texture" id=46]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0010.tex" type="Texture" id=47]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/W/camion-W-0011.tex" type="Texture" id=48]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/W/camion-W-0001.tex" type="Texture" id=49]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/W/camion-W-0002.tex" type="Texture" id=50]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/W/camion-W-0003.tex" type="Texture" id=51]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/W/camion-W-0004.tex" type="Texture" id=52]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0001.tex" type="Texture" id=53]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0002.tex" type="Texture" id=54]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0003.tex" type="Texture" id=55]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0004.tex" type="Texture" id=56]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0005.tex" type="Texture" id=57]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0006.tex" type="Texture" id=58]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0007.tex" type="Texture" id=59]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0008.tex" type="Texture" id=60]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0009.tex" type="Texture" id=61]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0010.tex" type="Texture" id=62]
[ext_resource path="res://assets_laberinto/anim-camion-andando-texturas/E/camion-E-0011.tex" type="Texture" id=63]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/N/camion-N-0001.tex" type="Texture" id=64]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/N/camion-N-0002.tex" type="Texture" id=65]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/N/camion-N-0003.tex" type="Texture" id=66]
[ext_resource path="res://assets_laberinto/anim-camion-quieto-texturas/N/camion-N-0004.tex" type="Texture" id=67]
[ext_resource path="res://assets_laberinto/humo.tex" type="Texture" id=68]
[ext_resource path="res://assets/sonidos_ui/collision.wav" type="Sample" id=69]
[ext_resource path="res://assets/sonidos_ui/engine_idle.wav" type="Sample" id=70]
[ext_resource path="res://assets/sonidos_ui/engine_running.wav" type="Sample" id=71]
[ext_resource path="res://assets/sonidos_ui/win.wav" type="Sample" id=72]
[ext_resource path="res://laberinto/sonidos.gd" type="Script" id=73]

[sub_resource type="SampleLibrary" id=1]

samples/bandoneon = {
"db": 4.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/contrabajo = {
"db": 18.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/violin = {
"db": 4.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [  ],
"loop": true,
"name": "",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "anim-down-stop",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "anim-down-move",
"speed": 8.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "anim-up-move",
"speed": 8.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "anim-right-stop",
"speed": 8.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": true,
"name": "anim-left-move",
"speed": 8.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": true,
"name": "anim-left-stop",
"speed": 8.0
}, {
"frames": [ ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ) ],
"loop": true,
"name": "anim-right-move",
"speed": 8.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ) ],
"loop": true,
"name": "anim-up-stop",
"speed": 8.0
} ]

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 514, -100 ), Vector2( 514, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/rotation")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.06, 1.5, 3.33, 5.0, 9.57, 6.01, 0.0 ]
}

[sub_resource type="SampleLibrary" id=5]

samples/collision = {
"db": -1.2,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 69 )
}
samples/engine_idle = {
"db": 4.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 70 )
}
samples/engine_running = {
"db": 6.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 71 )
}
samples/win = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 72 )
}

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 16, 48, 0, 32, 1296, 32, 1264, 48 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 1264, 48, 1296, 32, 1296, 736, 1264, 720 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 1264, 720, 1296, 736, 0, 736, 16, 720 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 16, 720, 0, 736, 0, 64, 16, 64 )

[node name="escena" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 32.0
margin/top = 32.0
margin/right = -1248.0
margin/bottom = -688.0
color = Color( 0.203125, 0.203125, 0.203125, 1 )

[node name="tileLaberinto" type="Node2D" parent="."]

script/script = ExtResource( 2 )
tile = ""

[node name="inventario" parent="." instance=ExtResource( 3 )]

editor/display_folded = true
margin/top = -2.0
margin/right = 944.0
margin/bottom = 51.0

[node name="Sprite" parent="inventario"]

transform/pos = Vector2( 102.601, 35.4748 )
transform/scale = Vector2( 1.76798, 1.01899 )

[node name="violin" parent="inventario"]

margin/bottom = 53.0

[node name="Background" parent="inventario/violin"]

margin/bottom = 53.0

[node name="contrabajo" parent="inventario"]

margin/bottom = 53.0

[node name="Background" parent="inventario/contrabajo"]

margin/bottom = 53.0

[node name="bandoneon" parent="inventario"]

editor/display_folded = true
margin/bottom = 53.0

[node name="Background" parent="inventario/bandoneon"]

margin/bottom = 53.0

[node name="itemSounds" type="SamplePlayer" parent="inventario"]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 5.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="personaje" type="KinematicBody2D" parent="."]

transform/pos = Vector2( -19.6842, -25.7139 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.36138, 0.067629, -0.0549953, 1.92025, 69.1676, 97.8413 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 7 )

[node name="collision_personaje" type="CollisionShape2D" parent="personaje"]

transform/pos = Vector2( 69.1676, 97.8413 )
transform/rot = -1.64048
transform/scale = Vector2( 2.36235, 1.92104 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="camion" type="AnimatedSprite" parent="personaje"]

transform/pos = Vector2( 68.9066, 92.2083 )
transform/scale = Vector2( 0.12, 0.12 )
frames = SubResource( 3 )
animation = "anim-right-stop"
frame = 2
playing = true

[node name="humo" type="Particles2D" parent="personaje/camion"]

visibility/visible = false
visibility/behind_parent = true
transform/pos = Vector2( -11.8646, 28.5691 )
transform/scale = Vector2( 4, 4 )
config/amount = 3
config/lifetime = 0.3
config/preprocess = 3600.0
config/process_mode = 1
config/offset = Vector2( -50, 0 )
config/explosiveness = 0.38
config/texture = ExtResource( 68 )
params/direction = 270.0
params/spread = 5.0
params/linear_velocity = 150.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 744.727
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 0.0
params/anim_initial_pos = 0.0

[node name="ganaste" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0, 1 )

[node name="Panel" type="Panel" parent="ganaste"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 514.0
margin/top = -100.0
margin/right = 693.0
margin/bottom = -45.0

[node name="anim" type="AnimationPlayer" parent="ganaste/Panel"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/mostrar = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="ganaste/Panel"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 3.0
margin/right = 63.0
margin/bottom = 21.0
text = "Ganaste!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sonidos_laberinto" type="SamplePlayer" parent="."]

process/pause_mode = 1
editor/display_folded = true
config/polyphony = 5
config/samples = SubResource( 5 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 0
default/reverb_send = 0.1
default/chorus_send = 0.0
script/script = ExtResource( 73 )
is_playing = false

[node name="timerLargo" type="Timer" parent="sonidos_laberinto"]

process_mode = 0
wait_time = 0.35
one_shot = true
autostart = false

[node name="timerSuperLargo" type="Timer" parent="sonidos_laberinto"]

process_mode = 0
wait_time = 2.2
one_shot = true
autostart = false

[node name="timerCorto" type="Timer" parent="sonidos_laberinto"]

process_mode = 0
wait_time = 0.15
one_shot = true
autostart = false

[node name="limites" type="StaticBody2D" parent="."]

transform/pos = Vector2( 637.854, 375.676 )
transform/scale = Vector2( 19.7999, 10.4397 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 0.0512821, 0, 0, 0.0952381, -32.7692, -36.5714 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 7 )
shapes/1/transform = Matrix32( 0.0512821, 0, 0, 0.0952381, -32.7692, -36.5714 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 8 )
shapes/2/transform = Matrix32( 0.0512821, 0, 0, 0.0952381, -32.7692, -36.5714 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 9 )
shapes/3/transform = Matrix32( 0.0512821, 0, 0, 0.0952381, -32.7692, -36.5714 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="limites"]

transform/pos = Vector2( -32.7692, -36.5714 )
transform/scale = Vector2( 0.0512821, 0.0952381 )
build_mode = 0
polygon = Vector2Array( 16, 48, 1264, 48, 1264, 720, 16, 720, 16, 64, 0, 64, 0, 736, 1296, 736, 1296, 32, 0, 32 )
shape_range = Vector2( 0, 3 )
trigger = false

[connection signal="gane" from="." to="." method="_on_escena_gane" flags=6]

[connection signal="caminando" from="personaje" to="." method="_on_personaje_caminando"]

[connection signal="chocando" from="personaje" to="." method="_on_personaje_chocando"]

[connection signal="parando" from="personaje" to="." method="_on_personaje_parando"]


[editable path="inventario"]
